Refactor : TeamMate 엔티티 내 같은 역할을 하는 두 개의 메소드 정리
- changeToOngoingStatus 메소드와 initiateGoal 메소드가 둘 다 public으로 열려 있어 코드 내에서 두 메소드를 혼용해서 사용하는 문제
- changeToOngoingStatus를 private으로 전환하고 외부에서는 initiateGoal 메소드를 사용하도록 변경