@@ -8,8 +8,9 @@ import checkmate.goal.application.dto.request.GoalCreateCommand;
 import checkmate.goal.application.dto.request.GoalModifyCommand;
 import checkmate.goal.application.dto.request.LikeCountCreateCommand;
 import checkmate.goal.domain.*;
-import checkmate.goal.domain.service.GoalFactory;
 import checkmate.notification.domain.event.StaticNotificationCreatedEvent;
+import checkmate.user.domain.User;
+import checkmate.user.domain.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.ApplicationEventPublisher;
@@ -17,7 +18,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static checkmate.notification.domain.NotificationType.COMPLETE_GOAL;
 
@@ -26,15 +26,22 @@ import static checkmate.notification.domain.NotificationType.COMPLETE_GOAL;
 @Service
 public class GoalCommandService {
     private final GoalRepository goalRepository;
+    private final TeamMateRepository teamMateRepository;
+    private final UserRepository userRepository;
     private final ApplicationEventPublisher eventPublisher;
     private final CacheTemplate cacheTemplate;
     private final GoalCommandMapper mapper;
 
     @Transactional
     public long create(GoalCreateCommand command) {
-        int ongoingGoalCount = goalRepository.countOngoingGoals(command.getUserId());
-        Goal goal = GoalFactory.createGoal(command, ongoingGoalCount);
+        User user = userRepository.findById(command.getUserId()).orElseThrow(UserNotFoundException::new);
+        Goal goal = mapper.toGoal(command);
         goalRepository.save(goal);
+
+        // 목표를 생성하는 것 외에 팀원을 추가하는 역할
+        TeamMate teamMate = goal.join(user);
+        teamMate.initiateGoal(goalRepository.countOngoingGoals(command.getUserId()));
+        teamMateRepository.save(teamMate);
         return goal.getId();
     }
 
@@ -56,11 +63,11 @@ public class GoalCommandService {
     public void updateYesterdayOveredGoals() {
         List<Goal> overedGoals = goalRepository.updateYesterdayOveredGoals();
 
-        List<TeamMate> teamMates = overedGoals
+        List<Long> goalIds = overedGoals.stream().map(Goal::getId).toList();
+        List<TeamMate> teamMates = teamMateRepository.findTeamMates(goalIds)
                 .stream()
-                .flatMap(goal -> goal.getTeam().stream())
-                .filter(tm -> tm.getTeamMateStatus() == TeamMateStatus.ONGOING)
-                .collect(Collectors.toList());
+                .filter(tm -> tm.getStatus() == TeamMateStatus.ONGOING)
+                .toList();
 
         eventPublisher.publishEvent(new StaticNotificationCreatedEvent(COMPLETE_GOAL,
                 mapper.toGoalCompleteNotificationDtos(teamMates)));
